--- a/WebApiAdventureWorks/Web.config
+++ b/WebApiAdventureWorks/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -9,9 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="WebApiAdventureWorksContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=WebApiAdventureWorksContext-20180908213724; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|WebApiAdventureWorksContext-20180908213724.mdf"
-      providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="WebApiAdventureWorksContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=WebApiAdventureWorksContext-20180908213724; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|WebApiAdventureWorksContext-20180908213724.mdf" providerName="System.Data.SqlClient" />
+  <add name="AdventureWorksContext" connectionString="data source=ELAPC\SQLEXPRESS;initial catalog=AdventureWorks2016CTP3;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
