--- a/WebApiAdventureWorks/WebApiAdventureWorks.csproj
+++ b/WebApiAdventureWorks/WebApiAdventureWorks.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -188,6 +189,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\AdventureWorks\PersonController.cs" />
     <Compile Include="Controllers\AuthorsController.cs" />
     <Compile Include="Controllers\BooksController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -199,6 +201,99 @@
       <DependentUpon>201809081202223_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\AdventureWorks\Address.cs" />
+    <Compile Include="Models\AdventureWorks\AddressType.cs" />
+    <Compile Include="Models\AdventureWorks\AdventureWorksContext.cs" />
+    <Compile Include="Models\AdventureWorks\AWBuildVersion.cs" />
+    <Compile Include="Models\AdventureWorks\BillOfMaterial.cs" />
+    <Compile Include="Models\AdventureWorks\BusinessEntity.cs" />
+    <Compile Include="Models\AdventureWorks\BusinessEntityAddress.cs" />
+    <Compile Include="Models\AdventureWorks\BusinessEntityContact.cs" />
+    <Compile Include="Models\AdventureWorks\ContactType.cs" />
+    <Compile Include="Models\AdventureWorks\CountryRegion.cs" />
+    <Compile Include="Models\AdventureWorks\CountryRegionCurrency.cs" />
+    <Compile Include="Models\AdventureWorks\CreditCard.cs" />
+    <Compile Include="Models\AdventureWorks\Culture.cs" />
+    <Compile Include="Models\AdventureWorks\Currency.cs" />
+    <Compile Include="Models\AdventureWorks\CurrencyRate.cs" />
+    <Compile Include="Models\AdventureWorks\Customer.cs" />
+    <Compile Include="Models\AdventureWorks\CustomerPII.cs" />
+    <Compile Include="Models\AdventureWorks\DatabaseLog.cs" />
+    <Compile Include="Models\AdventureWorks\DemoSalesOrderDetailSeed.cs" />
+    <Compile Include="Models\AdventureWorks\DemoSalesOrderHeaderSeed.cs" />
+    <Compile Include="Models\AdventureWorks\Department.cs" />
+    <Compile Include="Models\AdventureWorks\DTO\PersonDTO.cs" />
+    <Compile Include="Models\AdventureWorks\EmailAddress.cs" />
+    <Compile Include="Models\AdventureWorks\Employee.cs" />
+    <Compile Include="Models\AdventureWorks\EmployeeDepartmentHistory.cs" />
+    <Compile Include="Models\AdventureWorks\EmployeePayHistory.cs" />
+    <Compile Include="Models\AdventureWorks\Employee_Temporal.cs" />
+    <Compile Include="Models\AdventureWorks\Employee_Temporal_History.cs" />
+    <Compile Include="Models\AdventureWorks\ErrorLog.cs" />
+    <Compile Include="Models\AdventureWorks\Illustration.cs" />
+    <Compile Include="Models\AdventureWorks\JobCandidate.cs" />
+    <Compile Include="Models\AdventureWorks\Location.cs" />
+    <Compile Include="Models\AdventureWorks\OrderTracking.cs" />
+    <Compile Include="Models\AdventureWorks\Password.cs" />
+    <Compile Include="Models\AdventureWorks\Person.cs" />
+    <Compile Include="Models\AdventureWorks\PersonCreditCard.cs" />
+    <Compile Include="Models\AdventureWorks\PersonPhone.cs" />
+    <Compile Include="Models\AdventureWorks\Person_json.cs" />
+    <Compile Include="Models\AdventureWorks\Person_Temporal.cs" />
+    <Compile Include="Models\AdventureWorks\Person_Temporal_History.cs" />
+    <Compile Include="Models\AdventureWorks\PhoneNumberType.cs" />
+    <Compile Include="Models\AdventureWorks\Product.cs" />
+    <Compile Include="Models\AdventureWorks\ProductCategory.cs" />
+    <Compile Include="Models\AdventureWorks\ProductCostHistory.cs" />
+    <Compile Include="Models\AdventureWorks\ProductDescription.cs" />
+    <Compile Include="Models\AdventureWorks\ProductDocument.cs" />
+    <Compile Include="Models\AdventureWorks\ProductInventory.cs" />
+    <Compile Include="Models\AdventureWorks\ProductListPriceHistory.cs" />
+    <Compile Include="Models\AdventureWorks\ProductModel.cs" />
+    <Compile Include="Models\AdventureWorks\ProductModelIllustration.cs" />
+    <Compile Include="Models\AdventureWorks\ProductModelProductDescriptionCulture.cs" />
+    <Compile Include="Models\AdventureWorks\ProductPhoto.cs" />
+    <Compile Include="Models\AdventureWorks\ProductProductPhoto.cs" />
+    <Compile Include="Models\AdventureWorks\ProductReview.cs" />
+    <Compile Include="Models\AdventureWorks\ProductSubcategory.cs" />
+    <Compile Include="Models\AdventureWorks\ProductVendor.cs" />
+    <Compile Include="Models\AdventureWorks\Product_inmem.cs" />
+    <Compile Include="Models\AdventureWorks\Product_ondisk.cs" />
+    <Compile Include="Models\AdventureWorks\PurchaseOrderDetail.cs" />
+    <Compile Include="Models\AdventureWorks\PurchaseOrderHeader.cs" />
+    <Compile Include="Models\AdventureWorks\SalesOrderDetail.cs" />
+    <Compile Include="Models\AdventureWorks\SalesOrderDetail_inmem.cs" />
+    <Compile Include="Models\AdventureWorks\SalesOrderDetail_ondisk.cs" />
+    <Compile Include="Models\AdventureWorks\SalesOrderHeader.cs" />
+    <Compile Include="Models\AdventureWorks\SalesOrderHeaderSalesReason.cs" />
+    <Compile Include="Models\AdventureWorks\SalesOrderHeader_inmem.cs" />
+    <Compile Include="Models\AdventureWorks\SalesOrderHeader_ondisk.cs" />
+    <Compile Include="Models\AdventureWorks\SalesOrder_json.cs" />
+    <Compile Include="Models\AdventureWorks\SalesPerson.cs" />
+    <Compile Include="Models\AdventureWorks\SalesPersonQuotaHistory.cs" />
+    <Compile Include="Models\AdventureWorks\SalesReason.cs" />
+    <Compile Include="Models\AdventureWorks\SalesTaxRate.cs" />
+    <Compile Include="Models\AdventureWorks\SalesTerritory.cs" />
+    <Compile Include="Models\AdventureWorks\SalesTerritoryHistory.cs" />
+    <Compile Include="Models\AdventureWorks\ScrapReason.cs" />
+    <Compile Include="Models\AdventureWorks\Shift.cs" />
+    <Compile Include="Models\AdventureWorks\ShipMethod.cs" />
+    <Compile Include="Models\AdventureWorks\ShoppingCartItem.cs" />
+    <Compile Include="Models\AdventureWorks\SpecialOffer.cs" />
+    <Compile Include="Models\AdventureWorks\SpecialOfferProduct.cs" />
+    <Compile Include="Models\AdventureWorks\SpecialOfferProduct_inmem.cs" />
+    <Compile Include="Models\AdventureWorks\SpecialOfferProduct_ondisk.cs" />
+    <Compile Include="Models\AdventureWorks\SpecialOffer_inmem.cs" />
+    <Compile Include="Models\AdventureWorks\SpecialOffer_ondisk.cs" />
+    <Compile Include="Models\AdventureWorks\StateProvince.cs" />
+    <Compile Include="Models\AdventureWorks\Store.cs" />
+    <Compile Include="Models\AdventureWorks\TrackingEvent.cs" />
+    <Compile Include="Models\AdventureWorks\TransactionHistory.cs" />
+    <Compile Include="Models\AdventureWorks\TransactionHistoryArchive.cs" />
+    <Compile Include="Models\AdventureWorks\UnitMeasure.cs" />
+    <Compile Include="Models\AdventureWorks\Vendor.cs" />
+    <Compile Include="Models\AdventureWorks\WorkOrder.cs" />
+    <Compile Include="Models\AdventureWorks\WorkOrderRouting.cs" />
     <Compile Include="Models\Author.cs" />
     <Compile Include="Models\Book.cs" />
     <Compile Include="Models\WebApiAdventureWorksContext.cs" />
